@startuml Class
!theme plain
skinparam backgroundColor #FEFEFE
skinparam class {
    backgroundColor #D4AF37
    borderColor #8B6914
    fontColor #000
}

class User {
    - id: int
    - name: string
    - email: string
    - password: string
    - user_type: enum(user, admin)
    - created_at: datetime
    --
    + register()
    + login()
    + updateProfile()
    + sendMessage()
    + receiveMessage()
}

class Product {
    - id: int
    - name: string
    - price: decimal
    - image: string
    - product_details: text
    - admin_id: int
    --
    + getDetails()
    + updatePrice()
    + deleteProduct()
}

class Cart {
    - id: int
    - user_id: int
    - pid: int
    - name: string
    - price: decimal
    - quantity: int
    - image: string
    - created_at: datetime
    --
    + addItem()
    + removeItem()
    + updateQuantity()
    + calculateTotal()
    + clearCart()
}

class Order {
    - id: int
    - user_id: int
    - name: string
    - email: string
    - phone: string
    - address: string
    - payment_method: string
    - total_price: decimal
    - product_list: text
    - placed_on: date
    - status: enum(pending, confirmed, delivered)
    --
    + placeOrder()
    + updateStatus()
    + generateReceipt()
}

class Message {
    - id: int
    - sender_id: int
    - receiver_id: int
    - message: text
    - timestamp: datetime
    - is_read: boolean
    --
    + sendMessage()
    + markAsRead()
    + getConversation()
    + deleteMessage()
}

class Admin {
    - id: int (inherited from User)
    - admin_level: int
    --
    + addProduct()
    + editProduct()
    + deleteProduct()
    + viewOrders()
    + manageUsers()
    + respondToMessage()
    + viewDashboard()
}

User "1" --> "*" Cart : has
User "1" --> "*" Order : places
User "1" --> "*" Message : sends
Product "1" --> "*" Cart : added_to
Product "1" <-- "*" Order : contains
Admin --|> User : extends
Message "*" --> "1" User : from_user
Message "*" --> "1" User : to_admin

@enduml
